# digital-form-builder

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README_DLUHC.md  package.json  version
.github/workflows/: anchore-scan.yml  branch--lint-unit-and-smoke-test.yml  copilot_deploy.yml  dluhc-build-and-deploy-with-forms.yml  dluhc-build-and-publish.yml  dluhc-build-deploy-with-forms.yml  increment-version.yml  main--lint-unit-build-and-publish-images.yml  smoke-test.yml  test-and-tag-python.yml
copilot/fsd-form-runner/: manifest.yml
designer/: .eslintrc.js  package.json
designer/client/: ComponentTypeEdit.tsx  client-side-file-upload-field-edit.js  component.js  (+5 more)
fsd_config/: Dockerfile  manifest.yml
python/: README.md  __init__.py  answer_displayer.py  dictionaries.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/answer_displayers/: CheckboxesField.py  ClientSideFileUploadField.py  DatePartsField.py  EmailAddressField.py  FreeTextField.py  MonthYearField.py  MultiInputField.py  NumberField.py  RadiosField.py  TelephoneNumberField.py  TextField.py  UkAddressField.py  WebsiteField.py  YesNoField.py  __init__.py
python/components/: __init__.py
python/tests/: test_CheckboxesField.py  test_ClientSideFileUploadField.py  test_DatePartsField.py  test_EmailAddressField.py  test_FreeTextField.py  test_MonthYearField.py  test_MultiInputField.py  test_NumberField.py  test_RadiosField.py  test_TelephoneNumberField.py  test_TextField.py  test_UkAddressField.py  test_WebsiteField.py  test_YesNoField.py
runner/: package.json
(+244 files in other folders)
