[metadata]
name = funding-service-design-digital-form-builder-tools
version = 0.0.1
author = Thomas Ferns
author_email = thomas.ferns@version1.com
description = Python tools for our fork of the digital-form-builder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tferns/fsd-digital-form-builder-tools
project_urls =
    Bug Tracker = https://github.com/tferns/fsd-digital-form-builder-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
